web/bundles/dodicifansworldweb/less/home.less
header.home-header {
    font-family: "Open Sans";
    color: @white;
    .size(700px, 100%);
    background: url('../images/back-nasty.jpg');
    position: relative;
    margin-bottom: 20px;

    h1.title {
        padding-top: 30px;
        margin-bottom: 60px;
        font-size: 35px;
        font-weight: 100;
        color: @white;
        text-align: center;
        
        b {
            font-weight: bold;
        }
    }

    div.center-container {
        .size(406px, 1100px);
        margin: 0 auto;
        display: block;
        position: relative;

        ul.sections {
            display: block;
            width: 220px;
            .pull-left();

            li {
                text-align: left;
                color: @gray;
                font-size: 25px;
                font-weight: 300;
                padding: 20px;
                background-color: transparent;
                background: url('../images/bg_module_home.png') repeat;
                cursor: pointer;
                
                &.active {
                    background: none;
                    background-color: black;
                    color: gold;
                    cursor: initial;
                }
            }
        }

        div.thumb-container {
            display: block;
            .pull-left();
            width: 500px;
            height: 100%;
            overflow: hidden;

            img {
                .size(100%, 100%);
            }

            i.play-video {
                background-image: url('../images/ui/play_video.png');
                .square(80px);
                position: absolute;
                left: 39%;
                top: 39%;
                opacity: 0.5;

                &:hover{
                    opacity: 1;
                }
            }
        }

        div.content-container {
            display: block;
            .pull-left();
            .size(346px, 300px);
            padding: 30px;
            background-color: black;
            position: relative;

            span {
                color: @gray;
                font-weight: 100;
            }

            h1 {
                color: gold;
                font-weight: 300;
            }
            
            h2 {
                color: @white;
                font-weight: 300;
            }

            p {
                color: @white;
                font-weight: 100;
                font-size: 13px;
                margin-top: 30px;
            }

            button {
                position: absolute;
                bottom: 30px;
                font-weight: 100;
                font-size: 25px;
                text-align: center;
                .border-radius(3px);
                height: 50px;

                &.explore {
                    background-color: @black;
                    color: white;
                    border: 1px solid gray;
                }

                &.register{ 
                    left: 150px;
                    background-color: @green;
                    color: white;
                    border: 1px solid green;
                }
            }
        }
    }

    ul.tabs {
        position: absolute;
        bottom: 0;

        &[data-user-logged*="true"]{
            left: 39%;
        }

        &[data-user-logged*="false"]{
            left: 25%;
        }

        li {
            .pull-left();
            font-size: 40px;
            font-family: "Open Sans";
            font-weight: normal;
            color: @white;
            .size(auto, auto);
            padding: 30px;
            cursor: pointer;

            &.active {
                background-color: white;
                border-top: 2px solid orange;
                color: @black;
                cursor: initial;
            }
        }
    }
}

section.home-content {
    font-family: "Open Sans";

    h1.legend {
        text-align: center;
        font-weight: normal;
        b {
            font-weight: bold;
        }
    }

    div.content-container {
        div.tags {
            margin-top: 30px;
            margin-bottom: 35px;

            .pull-left {
                width: 70%;
                padding-left: 20px;

                span.label {
                    font-size: 17px;
                    font-weight: 300;
                    color: @black;
                    cursor: pointer;
                }
            }

            .pull-right {
                width: 20%;
                font-size: 25px;
                font-weight: 300;
                color: black;
                text-align: right;
                margin-right: 20px;

                &:hover {
                    text-decoration: none;
                }
            }
        }

        &[data-type-tab*="follow"] {
            #elements {
                /* Prevent vertical gaps */
                line-height: 0;
                -webkit-column-count: 4;
                -webkit-column-gap:   10px;
                -moz-column-count:    4;
                -moz-column-gap:      10px;
                column-count:         4;
                column-gap:           10px;
                margin-top:         30px;

             }
             #elements div.element {
                /* Just in case there are inline attributes */
                width: 100% !important;
                height: auto !important;
                position: relative;
                margin-bottom: 10px;
                
                img {
                    width: 100% !important;
                    height: auto !important;
                }
                
                .title-and-user {
                    position: absolute;
                    bottom: 0;
                    left: 0;
                    width: 100%;
                    height: 100px;
                    background-color: @black;
                    
                    .title {
                        width: 100%;
                        color: white;
                        font-weight: 100;
                        color: white;
                        font-size: 20px;
                        position: relative;
                        margin-top: 20px;
                        margin-left: 20px;
                        display: block;
                    }
                    
                    .user {
                        display: block;
                        position: relative;
                        width: 100%;
                        color: @green;
                        margin-top: 50px;
                        margin-left: 20px;
                        font-size: 15px;
                        font-weight: 300;
                    }
                }
             }

             @media (max-width: 1200px) {
               #elements {
                 -moz-column-count:    4;
                 -webkit-column-count: 4;
                 column-count:         4;
               }
             }
             @media (max-width: 1000px) {
               #elements {
                 -moz-column-count:    3;
                 -webkit-column-count: 3;
                 column-count:         3;
               }
             }
             @media (max-width: 800px) {
               #elements {
                 -moz-column-count:    2;
                 -webkit-column-count: 2;
                 column-count:         2;
               }
             }
             @media (max-width: 400px) {
               #elements {
                 -moz-column-count:    1;
                 -webkit-column-count: 1;
                 column-count:         1;
               }
             }
        }
    }
}

